src/objects/C501_Appointment_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Start_Date__c</fullName>
        <formula>DATEVALUE( Scheduled_Start_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_In_Hours__c</fullName>
        <label>Duration In Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Appointments_per_15_min_interval__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Number Appointments per 15 min interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Appointments_per_Month__c</fullName>
        <label>Number Appointments per Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_Of_Recurrence_End_By__c</fullName>
        <label>Range of Recurrence End By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_End_Time__c</fullName>
        <label>Scheduled End Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date_Time__c</fullName>
        <label>Scheduled Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Senior_Only_Appointments_60_and_over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Only Appointments (60 and over)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weekly_Occurrence__c</fullName>
        <label>Weekly Occurrence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Scheduled_Start_Date_Time__c</columns>
        <columns>Scheduled_End_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Number_Appointments_per_Month__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Range_Of_Recurrence_End_By__c</columns>
        <columns>Enable__c</columns>
        <columns>Number_Appointments_per_15_min_interval__c</columns>
        <columns>Senior_Only_Appointments_60_and_over__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Enabled</fullName>
        <columns>NAME</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Scheduled_Start_Date_Time__c</columns>
        <columns>Scheduled_End_Time__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Range_Of_Recurrence_End_By__c</columns>
        <columns>Number_Appointments_per_15_min_interval__c</columns>
        <columns>Senior_Only_Appointments_60_and_over__c</columns>
        <columns>Enable__c</columns>
        <columns>Number_Appointments_per_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Enabled</label>
    </listViews>
    <listViews>
        <fullName>All_with_Updat</fullName>
        <columns>Enable__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Scheduled_Start_Date_Time__c</columns>
        <columns>Scheduled_End_Time__c</columns>
        <columns>Range_Of_Recurrence_End_By__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Number_Appointments_per_Month__c</columns>
        <columns>Number_Appointments_per_15_min_interval__c</columns>
        <columns>Senior_Only_Appointments_60_and_over__c</columns>
        <filterScope>Everything</filterScope>
        <label>All, with Last Updated Date</label>
    </listViews>
    <nameField>
        <label>Appointment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>